2004-08-23  Per Bothner  <per@bothner.com>

	* configure.in (--with-swt):  New option.
	(WITH_SWT):  New conditional.
	(AC_OUTPUT):  Add gnu/jemacs/swt/Makefile.

2004-08-04  Christian Surlykke <christian@surlykke.dk>

	* build.xml: Added jemacs-swt-classes task.

2004-08-10  Per Bothner  <per@bothner.com>

	* configure.in: Change conf_classpath so the pathsep comes after
	the added entry.
	* Make-rules (CLASSPATH_ENV):  Change accordingly.
	(scm-classes.stamp, clisp-classes.stamp, elisp-classes.stamp):
	Use CLASSPATH_ENV, so --with-servlet jar gets searched.
	* Makefile.am (dis-kawa-@VERSION@.jar):  Update to use --with-servlet.

2004-08-09  Per Bothner  <per@bothner.com>

	* Make-rules (DIST_SOURCES):  Remove unused macro.

	* configure.in:  Replace --enable-servlet by --with-servlet[=jar].
	Default enable_servlet from with_servlet.
	(conf_classpath):  New variable, set from --with-servlet.
	Use AC_HELP_STRING.
	* Make-rules (CLASSPATH_ENV):  Use autoconf variable @conf_classpath@.

2004-08-08  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite):  Don't set decl if no uri.

2004-08-08  Per Bothner  <per@bothner.com>

	* kawa/lang/CalledContinuation.java (values):  A continuation
	can take multiple values.
	* kawa/lang/Continuation.java:  Extend MethodProc, not ProcedureN.
	(<init>):  Change to take a CallContext.
	(apply1, applyN):  Remove methods.
	(apply):  New method.
	* kawa/standard/call_with_values.java (apply):  Use checkN.
	* kawa/standard/callcc.java:  Extend MethodProc, not Procedure1.
	(apply(Procedure), apply1):  Remove methods.
	(numArgs, match1, apply):  New methods.
	* kawa/standard/load.java (loadCompiled):  Always assume ModuleBody.

2004-08-08  Per Bothner  <per@bothner.com>

	* kawa/lang/AutoloadProcedure.java (load):
	ModuleBody is not always Runnable.

	* kawa/lang/Translator.java (pushPositionOf):  Trivial optimization.

2004-08-07  Per Bothner  <per@bothner.com>

	* kawa/standard/cxr.java:  Use new WrongType constructors.